questions and partials styled for main app functionality, spacing nightmare 90% solved, handlebars in place and working with get all questions route

--- a/public/css/style.css
+++ b/public/css/style.css
@@ -89,8 +89,14 @@ form{
 }
 
 
-.space{
-    margin-bottom: 70px;
+.space-top {
+    margin-bottom: 50px;
+    margin-top: 80px;
+}
+
+.space-bottom {
+    margin-top: 100px;
+    margin-bottom: -64px;
 }
 
 .vertical-center {
@@ -99,7 +105,8 @@ form{
   
     display: flex;
     align-items: center;
-  }
+}
+
 
 @include media-breakpoint-up(sm) {
     .some-class {
